salesforce/force-app/main/default/objects/Clinical_Report__c/Clinical_Report__c.object-meta.xml
<CustomObject>
    <description>Stores submitted patient text reports and BioBERT extraction and anomaly detection results.</description>
    <label>Clinical Report</label>
    <nameField>
        <displayFormat>REP-{000000}</displayFormat>
        <label>Clinical Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>