salesforce/force-app/main/default/objects/Clinical_Report__c/fields/Anomaly_Description__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Description__c</fullName>
    <description>Description of the clinical anomalies or high-risk findings detected in the text.</description>
    <label>Anomaly Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>