salesforce/force-app/main/default/objects/Clinical_Report__c/fields/Anomaly_Detected__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if any clinical anomalies or critical alerts were identified in the report.</description>
    <label>Anomaly Detected</label>
    <type>Checkbox</type>
</CustomField>