salesforce/force-app/main/default/objects/Clinical_Report__c/fields/Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Name__c</fullName>
    <description>The name of the external clinic submitting the report.</description>
    <label>Clinic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>