salesforce/force-app/main/default/objects/Clinical_Report__c/fields/Extracted_Entities__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Entities__c</fullName>
    <description>JSON structured clinical entities (e.g. Diseases, Chemicals, Genes) extracted by the BioBERT service.</description>
    <label>Extracted Entities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>