salesforce/force-app/main/default/objects/Clinical_Report__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <description>The name of the patient for the clinical report.</description>
    <label>Patient Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>