salesforce/force-app/main/default/objects/Clinical_Report__c/fields/Report_Text__c.field-meta.xml
<CustomField>
    <fullName>Report_Text__c</fullName>
    <description>The raw unstructured medical text report submitted by the clinic.</description>
    <label>Report Text</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>